--- a/configs/RandomStroke.yaml
+++ b/configs/RandomStroke.yaml
@@ -1,5 +1,5 @@
 _BASE_: "./GatedCNN-Base.yaml"
 INPUT:
-  TRAIN_MASK_TYPE: "random_stroke"
-OUTPUT_DIR: "./output/gated_cnn_sn_patch_gan_random_stroke"
+  TRAIN_MASK_TYPE: "random_irregular"
+OUTPUT_DIR: "./output/gated_cnn_sn_patch_gan_random_irregular"
 
